# spyre-inference

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CI.md  CLAUDE.md  CODEOWNERS  Makefile  README.md  _typos.toml  mkdocs.yaml  pyproject.toml
.bob/skills/upgrade-vllm/: SKILL.md
.claude/skills/cleanup-monthly-labels/: SKILL.md
.claude/skills/debug-spyre/: SKILL.md  attention-notes.md
.claude/skills/update-architecture-docs/: SKILL.md
.claude/skills/upgrade-torch-spyre/: SKILL.md
.claude/skills/upgrade-vllm/: SKILL.md
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  rfc.yml
.github/actions/build-spyre-deps/: action.yml
.github/actions/gather-runner-info/: action.yml
.github/actions/override-spyre-rpms/: action.yml
.github/actions/spyre-rpm-install/: action.yml
.github/actions/spyre-uv-cache/: action.yml
.github/cache_config/: hf_models_and_datasets.yaml  manage_cache.py
.github/scripts/: check_benchmark_results.py  download_rpms.sh  generate_vllm_benchmark_matrix.py  ingest_vllm_benchmarks.py  run_vllm_benchmarks.py  utils.py
.github/workflows/: _test_matrix.yaml  add_label_automerge.yml  add_or_remove_artifacts_from_cache.yaml  auto-torch-spyre-bump.yml  build_and_publish.yaml  check_uv_lock.yml  dco-merge-queue.yml  deploy-docs.yml  doc_comment.yml  integration-tests.yaml  license-header.yml  populate-rpm-cache.yaml  pre-commit.yml  preview-docs.yml  publish_to_test_pypi.yaml  push-vllm-benchmarks-to-clickhouse.yml  test_each_commit.yaml  vllm-benchmark.yml
dockerfile/: Dockerfile.amd64
docs/: .nav.yml  README.md  pd-disagg-next-lab-report.md  pd-disagg-serve-validation-plan.md  requirements-docs.txt
docs/architecture/: fp8-support-gaps-validated.md  fp8-support-gaps.md  index.md  plugin-architecture.d2  system-overview.d2
docs/architecture/rfcs/: upstream-connector-port.md  upstream-nixl-pd-disaggregation.md
docs/architecture/rfcs/figures/: README.md  spyre-offloading-arch.d2  spyre-offloading-arch.mmd  spyre-shared-pool-m2.d2  spyre-shared-pool-m2.mmd  spyre-shm-pool-m2.d2  spyre-shm-pool-m2.mmd
docs/contributing/: README.md  vllm-upgrade-procedure.md
docs/examples/offline_inference/: torch_spyre_inference.md
docs/getting_started/: installation.md
docs/mkdocs/hooks/: generate_examples.py  generate_model_tables.py  url_schemes.py
docs/mkdocs/overrides/: main.html
docs/user_guide/: configuration.md  kineto_profiling.md  kv_connector_config.md
examples/: torch_spyre_inference.py
examples/experimental/: paged_vector_add.py  paged_vector_add_target.py  spyre_online_softmax_check.py  test_indirect_mem_access.py  varlen_batched_vector_add_target.py
examples/kv_connector/: spyre_connector_nixl_smoke.py
examples/offline_inference/: profile_spyre_inference.py  setup_profile_env.sh  torch_spyre_inference.py
experimental/attention_backend/: paged_vector_add.py  paged_vector_add_target.py
experimental/helion/: README.md  basic_transpile_example.py  profiling_sweep_experiment.py
experimental/helion/pastamachine/: __init__.py  _logging.py  analyze.py  transpile.py  util.py  verify.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/architecture/: index.html
latest/contributing/: index.html  vllm-upgrade-procedure.html
latest/examples/experimental/: spyre_online_softmax_check.html
latest/examples/offline_inference/: profile_spyre_inference.html  setup_profile_env.html  torch_spyre_inference.html
latest/getting_started/: installation.html
latest/search/: search_index.json
latest/user_guide/: configuration.html  kineto_profiling.html
scripts/: sync_upstream_tests.py
spyre_inference/: __init__.py  envs.py  hf_adapters.py  platform.py
spyre_inference/custom_ops/: __init__.py  attention_dispatch.py  linear.py  lm_head_common.py  logits_processor.py  parallel_lm_head.py  rms_norm.py  rotary_embedding.py  silu_and_mul.py  unfuse.py  utils.py  vocab_parallel_embedding.py
spyre_inference/custom_ops/kernels/: __init__.py  rms_norm.py
spyre_inference/distributed/: spyre_communicator.py
spyre_inference/distributed/kv_transfer/kv_connector/v1/: __init__.py  connector_config.py  heap_kv_accessor.py  heap_kv_helper.py  heap_kv_helper_client.py  heap_kv_inprocess_client.py  inmemory_spyre_connector.py  local_transport_store.py  metadata.py  persistent_kv_service.py  (+1 more)
spyre_inference/models/: __init__.py  opt.py
spyre_inference/testing/: models.py  pytest_plugin.py  upstream_tests.yaml
spyre_inference/v1/: __init__.py
spyre_inference/v1/attention/backends/: spyre_attn.py  spyre_attn_exp.py  spyre_attn_utils.py  spyre_encoder_attn.py
spyre_inference/v1/core/: scheduler.py
spyre_inference/v1/worker/: __init__.py  spyre_kv_connector_bridge.py  spyre_model_runner.py  spyre_worker.py
tests/: conftest.py  test_compile.py  test_connector_config.py  test_connector_nixl_smoke.py  test_distributed_tp2.py  test_encoder_models.py  test_fp8_linear.py  test_kv_connector_lifecycle.py  test_kv_connector_registration.py  test_kv_connector_structure.py  test_mlp.py  test_paged_kv_accessor.py  test_parallel_lm_head.py  test_platform.py  test_rms_norm.py  test_rotary_embedding.py  test_silu_and_mul.py  test_spyre_attn.py  test_spyre_attn_cpu.py  test_spyre_comms_native_probes.py  test_spyre_cpu_gpu_buffer.py  test_spyre_encoder_attn.py  test_spyre_fallback_probes.py  test_transformers_backend.py  test_unfuse.py  test_vllm_spyre_next.py  test_vocab_parallel_embedding.py
tests/data/: encoder_embed_refs.json  generate_encoder_embed_refs.py
tests/plugin/: README.md  pyproject.toml
tests/plugin/spyre_testing_plugin/: __init__.py  models.py  pytest_plugin.py  sync_upstream_test_deps.py  sync_upstream_tests.py  upstream_tests.yaml  vfio_reaper.py
tests/probes/: tp_probe.py
vllm-benchmarks/benchmarks/spyre/: latency-tests.yaml  serve-tests.yaml  throughput-tests.yaml
vllm_spyre_next/custom_ops/: parallel_lm_head.py  rotary_embedding.py  silu_and_mul.py  utils.py
vllm_spyre_next/v1/worker/: spyre_model_runner.py
