[build-system]
requires = ["setuptools>=82", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spyre-testing-plugin"
description = "pytest plugin for spyre-inference upstream test integration"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "pytest",
    "pyyaml",
    # upstream vLLM test dependencies: see sync_upstream_test_deps
    "albumentations>=2.0.8",
    "arctic-inference==0.1.1 ; platform_machine == 'x86_64'",
    "av>=17.1.0",
    "backoff>=2.2.1",
    "bitsandbytes==0.49.2",
    "blobfile>=3.2.0",
    "buildkite-test-collector==0.1.9",
    "datamodel-code-generator>=0.65.0",
    "datasets>=3.3.0,<=3.6.0",
    "decord==0.6.0 ; platform_machine == 'x86_64'",
    "einops>=0.8.2",
    "fastsafetensors>=0.3.2",
    "genai-perf>=0.0.8",
    "gpt-oss>=0.0.7 ; python_full_version >= '3.12'",
    "grpcio==1.78.0",
    "grpcio-reflection==1.78.0",
    "httpx>=0.28.1",
    "imagehash>=4.3.2",
    "instanttensor>=0.1.5 ; platform_machine == 'x86_64'",
    "jiwer>=4.0.0",
    "kaldi-native-fbank>=1.18.7",
    "librosa>=0.11.0",
    "lm-eval[api]>=0.4.12",
    "matplotlib>=3.11.0",
    "mistral-common[audio,image]>=1.11.3",
    "mteb[bm25s]>=2,<3",
    "num2words>=0.5.14",
    "numba==0.65.0",
    "numpy>=2.2.6",
    "open-clip-torch==2.32.0",
    "opencv-python-headless>=4.13.0",
    "openpyxl>=3.1.5",
    "peft>=0.18.1",
    "perceptron>=0.3.5",
    "plotly>=6.8.0",
    "pqdm>=0.2.0",
    "pydantic>=2.12",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-forked>=1.6.0",
    "pytest-rerunfailures>=16.3",
    "pytest-shard>=0.1.2",
    "pytest-timeout>=2.4.0",
    "ray[cgraph,default]>=2.48.0",
    "runai-model-streamer[azure,gcs,s3]==0.15.7",
    "schemathesis>=4.0.0",
    "segmentation-models-pytorch>0.4.0",
    "sentence-transformers>=5.2.0",
    "soundfile>=0.14.0",
    "tblib>=3.2.2",
    "tensorizer==2.10.1",
    "timm>=1.0.17",
    "tokenizers==0.22.2",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "transformers==5.12.1",
    "transformers-stream-generator>=0.0.5",
    "tritonclient>=2.51.0",
    "vector-quantize-pytorch>=1.29.1",
    "vocos>=0.1.0",
]
requires-python = ">=3.11"
dynamic = ["version"]

# Register the pytest plugin
[project.entry-points."pytest11"]
spyre_inference_test = "spyre_testing_plugin.pytest_plugin"

# Register the CLI entrypoint for syncing upstream test dependencies
[project.scripts]
sync-upstream-test-deps = "spyre_testing_plugin.sync_upstream_test_deps:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spyre_testing_plugin*"]

[tool.setuptools_scm]
version_file = "spyre_testing_plugin/_version.py"
local_scheme = "no-local-version"
root = "../.."

[dependency-groups]
dev = [
    "pytest",
]
