[build-system]
requires = ["setuptools>=82", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spyre-testing-plugin"
description = "pytest plugin for spyre-inference upstream test integration"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "pytest",
    "pyyaml",
    # upstream vLLM test dependencies: see sync_upstream_test_deps
    "aiohttp>=3.13.3",
    "albumentations>=2.0.8",
    "anthropic>=0.71.0",
    "arctic-inference==0.1.1 ; platform_machine == 'x86_64'",
    "av>=18.0.0",
    "backoff>=2.2.1",
    "bitsandbytes==0.49.2",
    "blake3>=1.0.9",
    "blobfile>=3.2.0",
    "buildkite-test-collector==0.1.9",
    "cachetools>=7.1.4",
    "cbor2>=6.1.3",
    "cloudpickle>=3.1.2",
    "cohere-melody>=0.9.0",
    "compressed-tensors==0.17.0",
    "datamodel-code-generator>=0.68.1",
    "datasets>=3.3.0,<=3.6.0",
    "decord==0.6.0 ; platform_machine == 'x86_64'",
    "depyf==0.20.0",
    "diskcache==5.6.3",
    "einops>=0.8.2",
    "fastapi[standard]>=0.133.0,<0.137.0",
    "fastsafetensors>=0.3.2",
    "filelock>=3.16.1",
    "genai-perf>=0.0.8",
    "gpt-oss>=0.0.7 ; python_full_version >= '3.12'",
    "grpcio==1.78.0",
    "grpcio-reflection==1.78.0",
    "httpx>=0.28.1",
    "ijson>=3.5.1",
    "imagehash>=4.3.2",
    "instanttensor>=0.1.5 ; platform_machine == 'x86_64'",
    "jiwer>=4.0.0",
    "jsonschema>=4.23.0",
    "kaldi-native-fbank>=1.18.7",
    "lark==1.2.2",
    "librosa>=0.11.0",
    "llguidance>=1.7.0,<1.8.0 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'ppc64le' or platform_machine == 'x86_64'",
    "lm-eval[api]>=0.4.12",
    "lm-format-enforcer==0.11.3",
    "matplotlib>=3.11.0",
    "mcp>=1.28.1",
    "mistral-common[audio,image]>=1.11.5",
    "model-hosting-container-standards>=0.1.14,<1.0.0",
    "msgspec>=0.21.1",
    "mteb[bm25s]>=2,<3",
    "ninja>=1.13.0",
    "num2words>=0.5.14",
    "numba==0.65.0",
    "numpy>=2.2.6",
    "open-clip-torch==2.32.0",
    "openai>=2.0.0",
    "openai-harmony>=0.0.3",
    "opencv-python-headless>=4.13.0",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-semantic-conventions-ai>=0.4.1",
    "outlines-core==0.2.14",
    "partial-json-parser>=0.2.1.1.post7",
    "peft>=0.18.1",
    "perceptron>=0.3.5",
    "pillow>=11.3.0",
    "plotly>=6.9.0",
    "pqdm>=0.2.0",
    "prometheus-client>=0.18.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "protobuf>=5.29.6,!=6.30.*,!=6.31.*,!=6.32.*,!=6.33.0.*,!=6.33.1.*,!=6.33.2.*,!=6.33.3.*,!=6.33.4.*",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
    "pybase64>=1.4.3",
    "pydantic>=2.12.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-forked>=1.6.0",
    "pytest-rerunfailures>=16.4",
    "pytest-shard>=0.1.2",
    "pytest-timeout>=2.4.0",
    "python-json-logger>=4.1.0",
    "pyzmq>=25.0.0",
    "ray[cgraph,default]>=2.48.0",
    "regex>=2026.6.28",
    "requests>=2.26.0",
    "runai-model-streamer[azure,gcs,s3]==0.15.7",
    "safetensors>=0.6.2",
    "schemathesis>=4.0.0",
    "segmentation-models-pytorch>0.4.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "setproctitle>=1.3.7",
    "setuptools>=77.0.3,<81.0.0 ; python_full_version >= '3.12'",
    "six>=1.16.0 ; python_full_version >= '3.12'",
    "soundfile>=0.14.0",
    "starlette>=1.0.1",
    "tblib>=3.2.2",
    "tensorizer==2.10.1",
    "tiktoken>=0.6.0",
    "timm>=1.0.17",
    "tokenizers==0.22.2",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "tqdm>=4.68.4",
    "transformers>=5.5.3",
    "transformers-stream-generator>=0.0.5",
    "tritonclient>=2.51.0",
    "typing-extensions>=4.10",
    "vector-quantize-pytorch>=1.30.1",
    "vocos>=0.1.0",
    "watchfiles>=1.2.0",
    "xgrammar>=0.2.1,<1.0.0 ; platform_machine == 'aarch64' or platform_machine == 'arm64' or platform_machine == 'ppc64le' or platform_machine == 's390x' or platform_machine == 'x86_64'",
]
requires-python = ">=3.11"
dynamic = ["version"]

# Register the pytest plugin
[project.entry-points."pytest11"]
spyre_inference_test = "spyre_testing_plugin.pytest_plugin"

# Register the CLI entrypoint for syncing upstream test dependencies
[project.scripts]
sync-upstream-test-deps = "spyre_testing_plugin.sync_upstream_test_deps:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spyre_testing_plugin*"]

[tool.setuptools_scm]
version_file = "spyre_testing_plugin/_version.py"
local_scheme = "no-local-version"
root = "../.."

[dependency-groups]
dev = [
    "pytest",
]
